# bitcoin-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  gen_test_keys.py  llms.txt  pyproject.toml  server.json  smithery.yaml  tools.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: CONTENT_PLAN.md  LAUNCH_STRATEGY.md  PSEO_PLAN.md  REFERRAL_PROGRAM.md  SIGNUP_FLOW_CRO.md
docs/superpowers/plans/: 2026-04-14-backlog-sweep.md
docs/superpowers/specs/: 2026-04-14-backlog-sweep-design.md
examples/: block_analysis.py  claude-desktop.json  cursor.json  fee_analysis.py  mempool_monitor.py  transaction_investigation.py  windsurf.json  zed.json
npm/: README.md  package.json
src/bitcoin_mcp/: __init__.py  address_validation.py  l402_client.py  server.py  xpub_decoder.py
tests/: conftest.py  test_address_validation.py  test_l402_client.py  test_psbt_security.py  test_server.py
