[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-mcp"
version = "0.5.1"
description = "MCP server for Bitcoin — 49 tools for AI agents to save money on fees. Zero config, works out of the box."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bortlesboat" },
]
keywords = ["bitcoin", "mcp", "model-context-protocol", "ai", "blockchain", "fee", "mempool", "rpc", "agent", "llm", "tool", "claude", "lightning", "node", "cryptocurrency", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "bitcoinlib-rpc>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Bortlesboat/bitcoin-mcp"
Documentation = "https://github.com/Bortlesboat/bitcoin-mcp#readme"
Repository = "https://github.com/Bortlesboat/bitcoin-mcp"
Issues = "https://github.com/Bortlesboat/bitcoin-mcp/issues"
Changelog = "https://github.com/Bortlesboat/bitcoin-mcp/releases"
"PyPI" = "https://pypi.org/project/bitcoin-mcp/"
"Satoshi API" = "https://bitcoinsapi.com"

[project.scripts]
bitcoin-mcp = "bitcoin_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
l402 = ["httpx>=0.27.0", "pymacaroons>=0.13.0"]
lightning = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin_mcp"]
